# actix-json-validator

./: Cargo.toml  README.md  validator.rs
.github/workflows/: ci.yml  publish.yml
docs/examples/good-foods/: Cargo.toml
docs/examples/good-foods/src/: main.rs
src/: lib.rs
